--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -4,9 +4,11 @@
   left: 0
   right: 0
   bottom: 0
+  width: 100%
+  height: 100%
   display: flex
   align-items: center
   justify-content: center
   color: #242424
-  background-color: #dfdfdf
+  background-color: #ffffff
 
