--- a/src/components/main-content.sass
+++ b/src/components/main-content.sass
@@ -1,8 +1,9 @@
 @import vars
 
 .main-content
+  flex-grow: 1;
   display: flex
   justify-content: center
   align-items: center
-  color: #242424
-  background-color: #C9C9C9
+  color: $main-content-color
+  background-color: $main-content-bgcolor
