--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -20,8 +20,42 @@ $half-margin: $margin / 2
 $double-margin: $margin * 2
 
 //
+// fonts
+//
+
+$title-font-stack: Arial, Helvetica, sans-serif
+
+//
 // colors
 //
+
+$top-bar-icon-bgcolor: #f2f2f2
+$top-bar-title-bgcolor: #e4e4e4
+$top-bar-title-color: #797979
+$main-content-bgcolor: #c9c9c9
+$main-content-color: #242424
+$left-nav-bgcolor: #ffffff
+$left-nav-header-color: #ffffff
+$left-nav-investigate-header-bgcolor: #49B860
+$left-nav-collect-header-bgcolor: #00AAE2
+$left-nav-investigate-bgcolor: #D2EDD8
+$left-nav-collect-bgcolor: #C0EAF8
+$button-color: #AEAEAE
+$button-bgcolor: #EEF9FC
+$button-border-color: #aeaeae
+$button-border-hover-color: #ffffff
+
+//
+// left nav panel
+//
+$left-nav-panel-width: 120px
+
+//
+// buttons
+//
+$button-width: 80px
+$button-height: 60px
+$circle-button-height: 80px
 
 $border-color: #FBF8E5
 
