--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -12,3 +12,12 @@
   color: #242424
   background-color: #ffffff
 
+.app-container
+  width: 100%
+  height: 100%
+
+.nav-and-content-container
+  display: flex
+  width: 100%
+  height: 100%
+
