--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -1,8 +1,8 @@
 @import vars
 
 .top-bar
-  grid-column: 1 / 3;
-  margin-bottom: 0px
+  width: 100%
+  margin-bottom: 3px
 
 .top-bar-container
   display: flex
@@ -11,15 +11,15 @@
   width: 108px
   height: 28px
   padding: 6px
-  background-color: #F2F2F2
   margin-right: 3px;
+  background-color: $top-bar-icon-bgcolor
 
 .top-bar-title-holder
-  background-color: #e4e4e4
   flex-grow: 1;
   text-align: center;
   padding-top: 12px
   padding-bottom: 8px
-  color: #797979	
-  font-family: Arial, Helvetica, sans-serif
+  color: $top-bar-title-color
+  font-family: $title-font-stack
   font-weight: bold
+  background-color: $top-bar-title-bgcolor
