--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -49,6 +49,10 @@ $button-border-hover-color: #ffffff
 // left nav panel
 //
 $left-nav-panel-width: 120px
+$scroll-bar-width: 6px
+$scroll-bar-bgcolor: #f1f1f1
+$scroll-bar-thumb-color: #7DD4F0
+$scroll-bar-hover-color: #5794A5
 
 //
 // buttons
