--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -1,10 +1,13 @@
 @import vars
 
 .left-nav-panel
+  flex-grow: 0
+  flex-shrink: 0
+  flex-basis: $left-nav-panel-width
   display: flex
   flex-direction: column
-  width: $left-nav-panel-width
   background-color: $left-nav-bgcolor
+  margin-right: 3px;
 
 .left-nav-header
   text-align: center
