--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -8,7 +8,9 @@
   display: flex
 
 .top-bar-icon-holder
-  width: 108px
+  flex-grow: 0
+  flex-shrink: 0
+  flex-basis: 108px
   height: 28px
   padding: 6px
   margin-right: 3px;
