--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -18,6 +18,12 @@ $margin: 10px
 $quarter-margin: $margin / 4
 $half-margin: $margin / 2
 $double-margin: $margin * 2
+$component-margin: 3px
+$double-component-margin: $component-margin * 2
+$component-padding: 3px
+$double-component-padding: $component-padding * 2
+$triple-component-padding: $component-padding * 3
+
 
 //
 // fonts
@@ -28,7 +34,7 @@ $title-font-stack: Arial, Helvetica, sans-serif
 //
 // colors
 //
-
+$component-bgcolor: #ffffff
 $top-bar-icon-bgcolor: #f2f2f2
 $top-bar-title-bgcolor: #e4e4e4
 $top-bar-title-color: #797979
@@ -46,9 +52,16 @@ $button-border-color: #aeaeae
 $button-border-hover-color: #ffffff
 
 //
+// top bar
+//
+$top-bar-height: 40px
+
+//
 // left nav panel
 //
 $left-nav-panel-width: 120px
+$left-nav-header-height: 30px
+$left-nav-investigate-height: 80px
 $scroll-bar-width: 6px
 $scroll-bar-bgcolor: #f1f1f1
 $scroll-bar-thumb-color: #7DD4F0
@@ -60,6 +73,8 @@ $scroll-bar-hover-color: #5794A5
 $button-width: 80px
 $button-height: 60px
 $circle-button-height: 80px
+$circle-button-radius: 40px
+$square-button-radius: 5px
 
 $border-color: #FBF8E5
 
