--- a/src/components/investigation-panel.sass
+++ b/src/components/investigation-panel.sass
@@ -5,7 +5,7 @@
   flex-direction: column
   justify-content: center
   text-align: center
-  background-color: #ffffff
+  background-color: $component-bgcolor
   border: 3px solid white
   border-radius: 5px
 
