--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -2,25 +2,28 @@
 
 .top-bar
   width: 100%
-  margin-bottom: 3px
+  height: $top-bar-height
+  margin-bottom: $component-margin
 
 .top-bar-container
   display: flex
+  height: 100%
 
 .top-bar-icon-holder
   flex-grow: 0
   flex-shrink: 0
-  flex-basis: 108px
-  height: 28px
-  padding: 6px
-  margin-right: 3px;
+  flex-basis: $left-nav-panel-width
+  display: flex;
+  justify-content: center
+  align-items: center
+  margin-right: $component-margin
   background-color: $top-bar-icon-bgcolor
 
 .top-bar-title-holder
-  flex-grow: 1;
-  text-align: center;
-  padding-top: 12px
-  padding-bottom: 8px
+  flex-grow: 1
+  display: flex
+  justify-content: center
+  align-items: center
   color: $top-bar-title-color
   font-family: $title-font-stack
   font-weight: bold
