--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -28,53 +28,85 @@ $triple-component-padding: $component-padding * 3
 //
 // fonts
 //
-
 $title-font-stack: Arial, Helvetica, sans-serif
 
 //
 // colors
 //
-$component-bgcolor: #ffffff
-$top-bar-icon-bgcolor: #f2f2f2
-$top-bar-title-bgcolor: #e4e4e4
-$top-bar-title-color: #797979
-$main-content-bgcolor: #c9c9c9
-$main-content-color: #242424
-$left-nav-bgcolor: #ffffff
-$left-nav-header-color: #ffffff
-$left-nav-investigate-header-bgcolor: #49B860
-$left-nav-collect-header-bgcolor: #00AAE2
-$left-nav-investigate-bgcolor: #D2EDD8
-$left-nav-collect-bgcolor: #C0EAF8
-$button-color: #AEAEAE
-$button-bgcolor: #EEF9FC
-$button-border-color: #aeaeae
-$button-border-hover-color: #ffffff
+$color-black: #000000
+$color-white: #ffffff
+$color-dark-green: #49B860
+$color-light-green: #D2EDD8
+$color-dark-blue: #00AAE2
+$color-medium-blue: #7DD4F0
+$color-medium-blue-2: #5794A5
+$color-light-blue: #C0EAF8
+$color-gray-blue: #EEF9FC
+
+$color-gray-36: #242424
+$color-gray-121: #797979
+$color-gray-174: #AEAEAE
+$color-gray-201: #c9c9c9
+$color-gray-228: #e4e4e4
+$color-gray-241: #f1f1f1
+$color-gray-242: #f2f2f2
+
+$component-bgcolor: $color-white
+$main-content-bgcolor: $color-gray-201
+$main-content-color: $color-gray-36
 
 //
 // top bar
 //
 $top-bar-height: 40px
+$top-bar-icon-bgcolor: $color-gray-242
+$top-bar-title-bgcolor: $color-gray-228
+$top-bar-title-color: $color-gray-121
 
 //
 // left nav panel
 //
+$left-nav-bgcolor: $color-white
+$left-nav-header-color: $color-white
+$left-nav-investigate-header-bgcolor: $color-dark-green
+$left-nav-collect-header-bgcolor: $color-dark-blue
+$left-nav-investigate-bgcolor: $color-light-green
+$left-nav-collect-bgcolor: $color-light-blue
 $left-nav-panel-width: 120px
 $left-nav-header-height: 30px
 $left-nav-investigate-height: 80px
 $scroll-bar-width: 6px
-$scroll-bar-bgcolor: #f1f1f1
-$scroll-bar-thumb-color: #7DD4F0
-$scroll-bar-hover-color: #5794A5
+$scroll-bar-bgcolor: $color-gray-241
+$scroll-bar-thumb-color: $color-medium-blue
+$scroll-bar-hover-color: $color-medium-blue-2
 
 //
 // buttons
 //
+$button-color: $color-gray-174
+$button-bgcolor: $color-gray-blue
+$button-border-color: $color-gray-174
+$button-border-hover-color: $color-white
 $button-width: 80px
 $button-height: 60px
-$circle-button-height: 80px
-$circle-button-radius: 40px
+$circle-button-height: $button-width
+$circle-button-radius: $button-width / 2
 $square-button-radius: 5px
+
+//
+// investigate dialog
+//
+$investigate-dialog-header-color: $color-white
+$investigate-dialog-header-bgcolor: $color-dark-green
+$investigate-dialog-bgcolor: $color-light-green
+$investigate-dialog-color: $color-black
+$investigate-dialog-button-footer-color: $color-black
+$investigate-dialog-footer-bgcolor: $color-dark-green
+$dialog-border-radius: 6px
+$investigate-dialog-height: 420px
+$investigate-dialog-width: 500px
+$investigate-dialog-header-height: 50px
+$investigate-dialog-footer-height: 24px
 
 $border-color: #FBF8E5
 
