refactor and add animations
[#161453827]

--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -54,6 +54,7 @@
   border-color: $button-border-color
   color: $button-color
   background-color: $button-bgcolor
+  transition: .1s
 
 .left-nav-button:hover
   border-color: $button-border-hover-color
