--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -42,9 +42,12 @@ $color-medium-blue: #7DD4F0
 $color-medium-blue-2: #5794A5
 $color-light-blue: #C0EAF8
 $color-gray-blue: #EEF9FC
+$color-dark-gold: #EBB936
+$color-light-gold: #D8E0B0
 
 $color-gray-36: #242424
 $color-gray-121: #797979
+$color-gray-148: #949494
 $color-gray-174: #AEAEAE
 $color-gray-201: #c9c9c9
 $color-gray-228: #e4e4e4
@@ -100,6 +103,9 @@ $investigate-dialog-header-color: $color-white
 $investigate-dialog-header-bgcolor: $color-dark-green
 $investigate-dialog-bgcolor: $color-light-green
 $investigate-dialog-color: $color-black
+$investigate-dialog-button-border-color: $color-dark-gold
+$investigate-dialog-button-bgcolor: $color-light-gold
+$investigate-dialog-button-color: $color-gray-148
 $investigate-dialog-button-footer-color: $color-black
 $investigate-dialog-footer-bgcolor: $color-dark-green
 $dialog-border-radius: 6px
