--- a/src/components/investigate-dialog.sass
+++ b/src/components/investigate-dialog.sass
@@ -12,6 +12,21 @@
   height: $investigate-dialog-height
   border: 3px solid $component-bgcolor
   border-radius: $dialog-border-radius
+  opacity: 1
+  -webkit-animation-name: fadein /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: .5s /* Safari 4.0 - 8.0 */
+  animation-name: fadein
+  animation-duration: .5s
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes fadein
+  from {opacity: 0;}
+  to {opacity: 1;}
+
+/* Standard syntax */
+@keyframes fadein
+  from {opacity: 0;}
+  to {opacity: 1;}
 
 .investigate-dialog-header
   display: flex
@@ -31,10 +46,13 @@
   align-items: center
 
 .investigate-dialog-close
-  width: 25px
-  padding: 8px
-  padding-right: 15px
-  padding-left: 0px
+  display: flex
+  justify-content: center
+  align-items: center
+  margin-right: 10px
+  flex-grow: 0
+  flex-shrink: 0
+  flex-basis: 20px
   font-size: 28px
 
 .investigate-dialog-content
@@ -64,18 +82,18 @@
   height: 80px
   line-height: 80px
   border-style: solid
-  border-color: #EBB936
-  background-color: #D8E0B0
+  border-color: $investigate-dialog-button-border-color
+  background-color: $investigate-dialog-button-bgcolor
   text-align: center
-  color: #949494
+  color: $investigate-dialog-button-color
   border-radius: $dialog-border-radius
+  transition: .1s
 
 .investigate-dialog-button:hover
-  border-color: #ffffff
+  border-color: $button-border-hover-color
 
 .investigate-dialog-button-footer
   width: 110px
   color: $investigate-dialog-button-footer-color
   font-size: 11px
-  margin-top: 5px
-  margin-bottom: 10px
+  margin: 5px
