refactor image placement
[#161453827]

--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -18,6 +18,9 @@
   align-items: center
   margin-right: $component-margin
   background-color: $top-bar-icon-bgcolor
+	
+.top-bar-icon
+  height: 26px
 
 .top-bar-title-holder
   flex-grow: 1
