refactor and update tests based on PR review
-refactor CSS to use less verbose SASS nesting
-remove dead code in cypress test, main-content.tsx
-let autoprefixer handle vendor prefixes
-remove empty div in main-content.tsx
-remove default content from ui.ts and update tests accordingly
[#161453827]

--- a/src/components/investigation-panel.sass
+++ b/src/components/investigation-panel.sass
@@ -9,34 +9,34 @@
   border: 3px solid white
   border-radius: 5px
 
-.investigation-panel-header
-  height: 50px
-  display: flex
-  font-family: Arial, Helvetica, sans-serif
-  font-weight: bold
-  color: #B18431
-  background-color: #EBB936
+  .header
+    height: 50px
+    display: flex
+    font-family: Arial, Helvetica, sans-serif
+    font-weight: bold
+    color: #B18431
+    background-color: #EBB936
 
-.investigation-panel-title
-  flex-grow: 1
-  text-align: center
-  padding: 15px
+  .title
+    flex-grow: 1
+    text-align: center
+    padding: 15px
 
-.investigation-panel-close
-  width: 25px
-  padding: 8px
-  padding-left: 0px
-  padding-right: 15px
-  font-size: 28px
+  .close
+    width: 25px
+    padding: 8px
+    padding-left: 0px
+    padding-right: 15px
+    font-size: 28px
 
-.investigation-panel-content
-  flex-grow: 1
-  justify-content: center
-  text-align: center
-  color: #000000
-  background-color: #FFE593
+  .content
+    flex-grow: 1
+    justify-content: center
+    text-align: center
+    color: #000000
+    background-color: #FFE593
 
-.investigation-panel-footer
-  height: 30px
-  background-color: #EBB936
+  .footer
+    height: 30px
+    background-color: #EBB936
 
