--- a/src/components/investigate-dialog.sass
+++ b/src/components/investigate-dialog.sass
@@ -13,87 +13,79 @@
   border: 3px solid $component-bgcolor
   border-radius: $dialog-border-radius
   opacity: 1
-  -webkit-animation-name: fadein /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: .5s /* Safari 4.0 - 8.0 */
   animation-name: fadein
   animation-duration: .5s
 
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes fadein
-  from {opacity: 0;}
-  to {opacity: 1;}
+  .header
+    display: flex
+    grid-column-start: 1
+    grid-column-end: 2
+    font-family: $title-font-stack
+    font-weight: bold
+    color: $investigate-dialog-header-color
+    background-color: $investigate-dialog-header-bgcolor
+    border-top-left-radius: $dialog-border-radius
+    border-top-right-radius: $dialog-border-radius
 
-/* Standard syntax */
+  .title
+    flex-grow: 1
+    display: flex
+    justify-content: center
+    align-items: center
+
+  .close
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-right: 10px
+    flex-grow: 0
+    flex-shrink: 0
+    flex-basis: 20px
+    font-size: 28px
+
+  .content
+    color: $investigate-dialog-color
+    background-color: $investigate-dialog-bgcolor
+
+  .footer
+    background-color: $investigate-dialog-header-bgcolor
+    border-bottom-left-radius: $dialog-border-radius
+    border-bottom-right-radius: $dialog-border-radius
+
+  .message
+    margin: 15px
+    font-size: 12px
+
+  .flex-container
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    align-items: center
+
+  .button-holder
+    margin: 10px
+
+  .button
+    width: 110px
+    height: 80px
+    line-height: 80px
+    border-style: solid
+    border-color: $investigate-dialog-button-border-color
+    background-color: $investigate-dialog-button-bgcolor
+    text-align: center
+    color: $investigate-dialog-button-color
+    border-radius: $dialog-border-radius
+    transition: .1s
+
+  .button:hover
+    border-color: $button-border-hover-color
+
+  .button-footer
+    width: 110px
+    color: $investigate-dialog-button-footer-color
+    font-size: 11px
+    margin: 5px
+
 @keyframes fadein
   from {opacity: 0;}
   to {opacity: 1;}
-
-.investigate-dialog-header
-  display: flex
-  grid-column-start: 1
-  grid-column-end: 2
-  font-family: $title-font-stack
-  font-weight: bold
-  color: $investigate-dialog-header-color
-  background-color: $investigate-dialog-header-bgcolor
-  border-top-left-radius: $dialog-border-radius
-  border-top-right-radius: $dialog-border-radius
-
-.investigate-dialog-title
-  flex-grow: 1
-  display: flex
-  justify-content: center
-  align-items: center
-
-.investigate-dialog-close
-  display: flex
-  justify-content: center
-  align-items: center
-  margin-right: 10px
-  flex-grow: 0
-  flex-shrink: 0
-  flex-basis: 20px
-  font-size: 28px
-
-.investigate-dialog-content
-  color: $investigate-dialog-color
-  background-color: $investigate-dialog-bgcolor
-
-.investigate-dialog-footer
-  background-color: $investigate-dialog-header-bgcolor
-  border-bottom-left-radius: $dialog-border-radius
-  border-bottom-right-radius: $dialog-border-radius
-
-.investigate-dialog-message
-  margin: 15px
-  font-size: 12px
-
-.investigate-dialog-flex-container
-  display: flex
-  flex-wrap: wrap
-  justify-content: center
-  align-items: center
-
-.investigate-dialog-button-holder
-  margin: 10px
-
-.investigate-dialog-button
-  width: 110px
-  height: 80px
-  line-height: 80px
-  border-style: solid
-  border-color: $investigate-dialog-button-border-color
-  background-color: $investigate-dialog-button-bgcolor
-  text-align: center
-  color: $investigate-dialog-button-color
-  border-radius: $dialog-border-radius
-  transition: .1s
-
-.investigate-dialog-button:hover
-  border-color: $button-border-hover-color
-
-.investigate-dialog-button-footer
-  width: 110px
-  color: $investigate-dialog-button-footer-color
-  font-size: 11px
-  margin: 5px
