--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -5,29 +5,29 @@
   height: $top-bar-height
   margin-bottom: $component-margin
 
-.top-bar-container
-  display: flex
-  height: 100%
+  .container
+    display: flex
+    height: 100%
 
-.top-bar-icon-holder
-  flex-grow: 0
-  flex-shrink: 0
-  flex-basis: $left-nav-panel-width
-  display: flex;
-  justify-content: center
-  align-items: center
-  margin-right: $component-margin
-  background-color: $top-bar-icon-bgcolor
-	
-.top-bar-icon
-  height: 26px
+  .icon-holder
+    flex-grow: 0
+    flex-shrink: 0
+    flex-basis: $left-nav-panel-width
+    display: flex;
+    justify-content: center
+    align-items: center
+    margin-right: $component-margin
+    background-color: $top-bar-icon-bgcolor
 
-.top-bar-title-holder
-  flex-grow: 1
-  display: flex
-  justify-content: center
-  align-items: center
-  color: $top-bar-title-color
-  font-family: $title-font-stack
-  font-weight: bold
-  background-color: $top-bar-title-bgcolor
+  .icon
+    height: 26px
+
+  .title-holder
+    flex-grow: 1
+    display: flex
+    justify-content: center
+    align-items: center
+    color: $top-bar-title-color
+    font-family: $title-font-stack
+    font-weight: bold
+    background-color: $top-bar-title-bgcolor
