--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -35,6 +35,9 @@ $title-font-stack: Arial, Helvetica, sans-serif
 //
 $color-black: #000000
 $color-white: #ffffff
+$color-red: #ff0000
+$color-yellow: #ffff00
+$color-blue: #0000ff
 $color-dark-green: #49B860
 $color-light-green: #D2EDD8
 $color-dark-blue: #00AAE2
@@ -44,6 +47,7 @@ $color-light-blue: #C0EAF8
 $color-gray-blue: #EEF9FC
 $color-dark-gold: #EBB936
 $color-light-gold: #D8E0B0
+$color-mouse-brown: #B18431
 
 $color-gray-36: #242424
 $color-gray-121: #797979
@@ -78,6 +82,14 @@ $left-nav-collect-bgcolor: $color-light-blue
 $left-nav-panel-width: 120px
 $left-nav-header-height: 30px
 $left-nav-investigate-height: 80px
+$left-nav-footer-height: 40px
+$left-nav-footer-color: $color-white
+$left-nav-footer-bgcolor: $color-dark-blue
+$left-nav-legend-circle-size: 6px
+$left-nav-legend-font-size: 10px
+$left-nav-legend-male-color: $color-red
+$left-nav-legend-female-color: $color-yellow
+$left-nav-legend-heterozygote-color: $color-blue
 $scroll-bar-width: 6px
 $scroll-bar-bgcolor: $color-gray-241
 $scroll-bar-thumb-color: $color-medium-blue
