--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -20,10 +20,12 @@ $half-margin: $margin / 2
 $double-margin: $margin * 2
 $component-margin: 3px
 $double-component-margin: $component-margin * 2
+$triple-component-margin: $component-margin * 3
 $component-padding: 3px
 $double-component-padding: $component-padding * 2
 $triple-component-padding: $component-padding * 3
-
+$component-border-width: 3px
+$component-border-radius: 5px
 
 //
 // fonts
@@ -44,6 +46,7 @@ $color-light-blue: #C0EAF8
 $color-gray-blue: #EEF9FC
 $color-dark-gold: #EBB936
 $color-light-gold: #D8E0B0
+$color-mouse-brown: #B18431
 
 $color-gray-36: #242424
 $color-gray-121: #797979
@@ -94,7 +97,7 @@ $button-width: 80px
 $button-height: 60px
 $circle-button-height: $button-width
 $circle-button-radius: $button-width / 2
-$square-button-radius: 5px
+$square-button-radius: $component-border-radius
 
 //
 // investigate dialog
@@ -108,11 +111,20 @@ $investigate-dialog-button-bgcolor: $color-light-gold
 $investigate-dialog-button-color: $color-gray-148
 $investigate-dialog-button-footer-color: $color-black
 $investigate-dialog-footer-bgcolor: $color-dark-green
-$dialog-border-radius: 6px
+$dialog-border-radius: $component-border-radius
 $investigate-dialog-height: 420px
 $investigate-dialog-width: 500px
 $investigate-dialog-header-height: 50px
 $investigate-dialog-footer-height: 24px
+
+//
+// population space
+//
+$population-header-height: 50px
+$population-space-bgcolor: $color-mouse-brown
+$population-space-header-color: $color-mouse-brown
+$population-space-header-bgcolor: $color-dark-gold
+$population-graph-button-icon-height: 18px
 
 $border-color: #FBF8E5
 
