refactor population space into two-up display
[#161766223]

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -1,14 +1,14 @@
 @import vars
 
-.population-space
+.two-up-display
   display: flex
   width: 100%
   height: 100%
   justify-content: center
   text-align: center
-  background-color: $population-space-bgcolor
+  background-color: $two-up-bgcolor
 
-.population-panel
+.two-up-panel
   flex-basis: 50%
   display: flex
   flex-direction: column
@@ -18,13 +18,13 @@
   margin: $double-component-margin
 
   .header
-    height: $population-header-height
+    height: $two-up-header-height
     display: flex
     align-items: center
     font-family: $title-font-stack
     font-weight: bold
-    color: $population-space-header-color
-    background-color: $population-space-header-bgcolor
+    color: $two-up-header-color
+    background-color: $two-up-header-bgcolor
     border-top-left-radius: $component-border-radius
     border-top-right-radius: $component-border-radius
 
@@ -38,9 +38,9 @@
       margin: $double-component-margin
 
     .button
-      height: $population-graph-button-icon-height
-      width: $population-graph-button-icon-width
-      fill: $population-graph-button-icon-color
+      height: $two-up-graph-button-icon-height
+      width: $two-up-graph-button-icon-width
+      fill: $two-up-graph-button-icon-color
 
   .content
     flex-grow: 1
