--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -118,15 +118,15 @@ $investigate-dialog-header-height: 50px
 $investigate-dialog-footer-height: 24px
 
 //
-// population space
+// two-up display
 //
-$population-header-height: 50px
-$population-space-bgcolor: $color-mouse-brown
-$population-space-header-color: $color-mouse-brown
-$population-space-header-bgcolor: $color-dark-gold
-$population-graph-button-icon-color: $color-white
-$population-graph-button-icon-height: 18px
-$population-graph-button-icon-width: $population-graph-button-icon-height
+$two-up-header-height: 50px
+$two-up-bgcolor: $color-mouse-brown
+$two-up-header-color: $color-mouse-brown
+$two-up-header-bgcolor: $color-dark-gold
+$two-up-graph-button-icon-color: $color-white
+$two-up-graph-button-icon-height: 18px
+$two-up-graph-button-icon-width: $two-up-graph-button-icon-height
 
 $border-color: #FBF8E5
 
