Add UI specs for color, size, position, fonts
Add colors from style spec.  Add variables for collection button.
[#161596944]

--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -16,9 +16,10 @@
     display: flex
     justify-content: center
     align-items: center
-    margin-bottom: $component-margin
+    margin-bottom: $internal-component-margin
     color: $left-nav-header-color
     font-family: $title-font-stack
+    font-size: $font-size-header
     font-weight: bold
 
     &.investigate
@@ -80,6 +81,7 @@
     display: flex
     justify-content: center
     align-items: center
+    margin-top: $internal-component-margin
     margin-bottom: $component-margin
     color: $left-nav-footer-color
     background-color: $left-nav-footer-bgcolor
