--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -4,6 +4,7 @@
   width: 100%
   height: $top-bar-height
   margin-bottom: $component-margin
+  flex-shrink: 0
 
   .container
     display: flex
@@ -20,7 +21,7 @@
     background-color: $top-bar-icon-bgcolor
 
   .icon
-    height: 26px
+    height: $top-bar-icon-height
 
   .title-holder
     flex-grow: 1
