--- a/src/components/collect-button.sass
+++ b/src/components/collect-button.sass
@@ -27,9 +27,10 @@
     top: 0px
     left: 0px
     padding: 1px
-    color: $color-white
     font-family: $title-font-stack
+    font-size: $font-size-header
     font-weight: bold
+    color: $color-nav-cinder-light1
 
   .collect-button
     display: flex
@@ -44,6 +45,7 @@
     &.uncollected
       border-style: dashed
       border-color: $color-nav-cinder-light1
+      background-color: $color-nav-cerulean-light3
 
     &.male
       border-color: $color-key-red
@@ -58,18 +60,17 @@
       align-items: center
       width: $collect-button-inner-border-width
       height: $collect-button-inner-border-height
-      border: $collect-button-border-width dashed $color-white
-      border-radius: $collect-button-inner-border-radius
-      background-color: $color-white
 
       &.heterozygote
-        border-color: $color-key-blue
+        border-radius: $collect-button-inner-border-radius
+        border: $collect-button-border-width dashed $color-key-blue
 
     .icon
       height: $collect-button-icon-height
 
     .label
       font-size: $font-size-label1
+      color: $color-nav-cinder-dark2
 
   .collect-button:hover
     border-color: $color-nav-cerulean-dark2
