Add authoring and alg for no-inheritance breeding
[#161425112]

--- a/src/components/authoring.sass
+++ b/src/components/authoring.sass
@@ -1,5 +1,7 @@
 
 form.rjsf
+  overflow-y: scroll
+  height: 100vh
   margin: 2rem 0 0 0
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
   font-size: 0.8125rem
@@ -43,6 +45,10 @@ form.rjsf
     color: inherit
     white-space: normal
     border-bottom: 1px solid #e5e5e5
+
+  .minor-group legend
+    border: none
+    font-size: 1.1rem
 
   label
     display: inline-block
@@ -107,4 +113,4 @@ form.rjsf
 
   .help-block
     margin: 0
-    color: #777
+    color: #9543b6
