Add start of model scaling
This scales the model up correctly. Will need to continue work on
scaling model down...

[#161996047]

--- a/src/components/spaces/populations/populations.sass
+++ b/src/components/spaces/populations/populations.sass
@@ -1,6 +1,12 @@
 .populations-toolbar
+  position: fixed
   display: flex
   flex-wrap: wrap
+  width: 40%
+  bottom: 6px
 
   button
     height: 20px
+
+#environment
+  overflow: hidden
