Add initial 4-up layout and sample layout in Comparison [#162053472]

--- a/src/components/charts/chart.sass
+++ b/src/components/charts/chart.sass
@@ -6,3 +6,8 @@
 
   .chart-display
     max-height: 400px
+
+    .line-chart-container
+      position: relative
+      height: 100%
+      width: 100%
