Fix authoring defaults; improve authoring CSS

--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -12,6 +12,9 @@
   color: #242424
   background-color: #ffffff
 
+  &.authoring
+    position: initial
+
 .app-container
   display: flex
   flex-direction: column
