Add pointer to collect buttons
[#161784877]

--- a/src/components/collect-button.sass
+++ b/src/components/collect-button.sass
@@ -21,6 +21,7 @@
 
   .x-close:hover
     color: $color-nav-cerulean-dark2
+    cursor: pointer
 
   .index
     position: absolute
@@ -74,3 +75,4 @@
 
   .collect-button:hover
     border-color: $color-nav-cerulean-dark2
+    cursor: pointer
