Update button title position
[#161784877]

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -143,7 +143,7 @@ $explore-button-height: 25px
 $explore-button-icon-width: 25px
 $explore-button-icon-height: $explore-button-height - (2 * $internal-component-margin)
 $explore-button-title-width: 65px
-$explore-button-title-height: $explore-button-height
+$explore-button-title-height: $explore-button-height - (2 * $internal-component-margin)
 $explore-button-left-radius: 10px
 $explore-button-right-radius: 25px
 $explore-button-icon-left-radius: $explore-button-left-radius / 2
