--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -178,6 +178,16 @@ $explore-button-org-active-bgcolor: $color-salmon-orange-dark4
 $explore-button-org-active-icon-bgcolor: $color-salmon-orange-dark3
 $explore-button-org-active-color: $color-white
 
+$explore-button-dna-bgcolor: $color-nav-cerulean
+$explore-button-dna-icon-bgcolor: $color-nav-cerulean-light1
+$explore-button-dna-color: $color-plum-purple-dark5
+$explore-button-dna-hover-bgcolor: $color-nav-cerulean-dark2
+$explore-button-dna-hover-icon-bgcolor: $color-nav-cerulean-dark1
+$explore-button-dna-hover-color: $color-nav-cerulean-light2
+$explore-button-dna-active-bgcolor: $color-plum-purple-dark4
+$explore-button-dna-active-icon-bgcolor: $color-nav-cerulean-dark3
+$explore-button-dna-active-color: $color-white
+
 
 //
 // collect buttons
