Refine building of CSS class name in explore buttons

--- a/src/components/explore-button.sass
+++ b/src/components/explore-button.sass
@@ -20,7 +20,7 @@
   &.clickable
     color: $color-black
 
-  &.population
+  &.populations
     background-color: $explore-button-pop-active-bgcolor
 
     &.clickable
@@ -58,7 +58,7 @@
     border-bottom-left-radius: $explore-button-icon-left-radius
     background-color: $color-nav-cinder-light2
 
-    &.population
+    &.populations
       background-color: $explore-button-pop-active-icon-bgcolor
 
       &.clickable
@@ -93,7 +93,7 @@
 .explore-button.clickable:hover
   cursor: pointer
 
-.explore-button.clickable.population:hover
+.explore-button.clickable.populations:hover
   background-color: $explore-button-pop-hover-bgcolor
   color: $explore-button-pop-hover-color
 
@@ -109,7 +109,7 @@
   background-color: $explore-button-dna-hover-bgcolor
   color: $explore-button-dna-hover-color
 
-.explore-button.clickable:hover .icon.population
+.explore-button.clickable:hover .icon.populations
   background-color: $explore-button-pop-hover-icon-bgcolor
 
 .explore-button.clickable:hover .icon.breeding
