Adding backpack mouse selection

--- a/src/components/collect-button.sass
+++ b/src/components/collect-button.sass
@@ -68,6 +68,9 @@
     &.female
       border-color: $color-key-yellow
 
+    &.deselected
+      opacity: .5
+
     .inner-outline
       display: flex
       flex-direction: column
