--- a/src/components/spaces/populations/populations.sass
+++ b/src/components/spaces/populations/populations.sass
@@ -8,5 +8,26 @@
   button
     height: 20px
 
+  .two-state-button
+    background-color: #FFF
+    border-radius: 4px
+    border: 1px solid #D0D0D0
+    height: 17px
+    font-size: 0.8em
+    line-height: 0.8em
+
+    label
+      float: left
+      width: 4.0em
+      span
+        text-align: center
+        padding: 3px 0px
+        display: block
+      input
+        display: none;
+      input:checked + span
+        background-color: #911
+        color: #fff
+
 #environment
   overflow: hidden
