--- a/src/components/explore-button.sass
+++ b/src/components/explore-button.sass
@@ -10,12 +10,15 @@
   border-bottom-left-radius: $explore-button-left-radius
   border-top-right-radius: $explore-button-right-radius
   border-bottom-right-radius: $explore-button-right-radius
-  font-size: $font-size-label1
+  font-size: $font-size-normal
   background-color: $color-nav-cinder-light3
   color: $color-nav-cinder-light1
+  fill: $color-nav-cinder-light1
+  transition-duration: $fade-time
 
   &.active
     color: $color-white
+    fill: $color-white
 
   &.clickable
     color: $color-black
@@ -26,6 +29,7 @@
     &.clickable
       background-color: $explore-button-pop-bgcolor
       color: $explore-button-pop-color
+      fill: $explore-button-pop-color
 
   &.breeding
     background-color: $explore-button-breed-active-bgcolor
@@ -33,6 +37,7 @@
     &.clickable
       background-color: $explore-button-breed-bgcolor
       color: $explore-button-breed-color
+      fill: $explore-button-breed-color
 
   &.organism
     background-color: $explore-button-org-active-bgcolor
@@ -40,6 +45,7 @@
     &.clickable
       background-color: $explore-button-org-bgcolor
       color: $explore-button-org-color
+      fill: $explore-button-org-color
 
   &.dna
     background-color: $explore-button-dna-active-bgcolor
@@ -47,8 +53,12 @@
     &.clickable
       background-color: $explore-button-dna-bgcolor
       color: $explore-button-dna-color
+      fill: $explore-button-dna-color
 
   .icon
+    display: flex
+    justify-content: center
+    align-items: center
     width: $explore-button-icon-width
     height: $explore-button-icon-height
     margin: $internal-component-margin
@@ -82,6 +92,10 @@
       &.clickable
         background-color: $explore-button-dna-icon-bgcolor
 
+    .image
+      width: 18px
+      height: 18px
+
   .title
     display: flex
     justify-content: center
@@ -96,18 +110,22 @@
 .explore-button.clickable.populations:hover
   background-color: $explore-button-pop-hover-bgcolor
   color: $explore-button-pop-hover-color
+  fill: $explore-button-pop-hover-color
 
 .explore-button.clickable.breeding:hover
   background-color: $explore-button-breed-hover-bgcolor
   color: $explore-button-breed-hover-color
+  fill: $explore-button-breed-hover-color
 
 .explore-button.clickable.organism:hover
   background-color: $explore-button-org-hover-bgcolor
   color: $explore-button-org-hover-color
+  fill: $explore-button-org-hover-color
 
 .explore-button.clickable.dna:hover
   background-color: $explore-button-dna-hover-bgcolor
   color: $explore-button-dna-hover-color
+  fill: $explore-button-dna-hover-color
 
 .explore-button.clickable:hover .icon.populations
   background-color: $explore-button-pop-hover-icon-bgcolor
