--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -18,7 +18,7 @@
     align-items: center
     margin-bottom: $internal-component-margin
     color: $left-nav-header-color
-    font-family: $title-font-stack
+    font-family: $font-stack
     font-size: $font-size-header
     font-weight: bold
 
