--- a/src/components/legend.sass
+++ b/src/components/legend.sass
@@ -10,8 +10,9 @@
   justify-content: center
   align-items: center
   text-align: center
-  font-size: $left-nav-legend-font-size
-  margin: $component-margin
+  font-size: $font-size-normal
+  margin: $internal-component-margin
+  margin-top: 0px
 
 .item-top-left
   grid-column-start: 1
