--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -20,7 +20,7 @@
     height: $two-up-header-height
     display: flex
     align-items: center
-    font-family: $title-font-stack
+    font-family: $font-stack
     font-weight: bold
     color: $two-up-header-color
     text-align: center
