--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -29,6 +29,6 @@
     justify-content: center
     align-items: center
     color: $top-bar-title-color
-    font-family: $title-font-stack
+    font-family: $font-stack
     font-weight: bold
     background-color: $top-bar-title-bgcolor
