--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -31,11 +31,17 @@ $component-border-radius: 5px
 //
 // fonts
 //
+$font-stack: Ubuntu, sans-serif
 $title-font-stack: Arial, Helvetica, sans-serif
-$font-size-header: 15px
+$font-size-header: 14px
 $font-size-normal: 12px
 $font-size-label1: 11px
 $font-size-label2: 10px
+
+//
+// animations
+//
+$fade-time: .2s
 
 //
 // colors
@@ -62,6 +68,8 @@ $color-nav-shamrock: #5dd581
 $color-nav-shamrock-light1: #92e3aa
 $color-nav-shamrock-light2: #d1f3db
 $color-nav-shamrock-light3: #eefaf2
+$color-nav-cerulean-dark5: #043B4C
+$color-nav-cerulean-dark4: #064F66
 $color-nav-cerulean-dark3: #065872
 $color-nav-cerulean-dark2: #0984ab
 $color-nav-cerulean-dark1: #0caadd
@@ -126,7 +134,6 @@ $left-nav-footer-height: 40px
 $left-nav-footer-color: $color-white
 $left-nav-footer-bgcolor: $color-nav-cerulean-dark1
 $left-nav-legend-circle-size: 6px
-$left-nav-legend-font-size: 10px
 $left-nav-legend-male-color: $color-key-red
 $left-nav-legend-female-color: $color-key-yellow
 $left-nav-legend-heterozygote-color: $color-key-blue
@@ -180,11 +187,11 @@ $explore-button-org-active-color: $color-white
 
 $explore-button-dna-bgcolor: $color-nav-cerulean
 $explore-button-dna-icon-bgcolor: $color-nav-cerulean-light1
-$explore-button-dna-color: $color-plum-purple-dark5
+$explore-button-dna-color: $color-nav-cerulean-dark5
 $explore-button-dna-hover-bgcolor: $color-nav-cerulean-dark2
 $explore-button-dna-hover-icon-bgcolor: $color-nav-cerulean-dark1
 $explore-button-dna-hover-color: $color-nav-cerulean-light2
-$explore-button-dna-active-bgcolor: $color-plum-purple-dark4
+$explore-button-dna-active-bgcolor: $color-nav-cerulean-dark4
 $explore-button-dna-active-icon-bgcolor: $color-nav-cerulean-dark3
 $explore-button-dna-active-color: $color-white
 
@@ -194,13 +201,15 @@ $explore-button-dna-active-color: $color-white
 //
 $collect-button-holder-width: 100px
 $collect-button-holder-height: $collect-button-holder-width
-$collect-button-width: 88px
+$collect-button-width: 82px
 $collect-button-height: $collect-button-width
-$collect-button-radius: $collect-button-width / 2
+$collect-button-radius: 50%
+$collect-button-outline-width: $collect-button-width + 16px
+$collect-button-outline-height: $collect-button-outline-width
 $collect-button-inner-border-width: $collect-button-width - 10px
 $collect-button-inner-border-height: $collect-button-inner-border-width
-$collect-button-inner-border-radius: $collect-button-inner-border-width / 2
-$collect-button-border-width: 2px
+$collect-button-inner-border-radius: 50%
+$collect-button-border-width: 3px
 $collect-button-icon-height: 45px
 
 //
